# libvirt_autoscaler

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  config.toml  justfile
proto/: externalgrpc.proto
src/: main.rs
src/lib/: cloud_provider_impl.rs  lib.rs  libvirt.rs  node_template.rs  structs.rs  vm_xml.rs  xml_consts.rs
tests/: test.rs
tools/: target_arch.sh
