[package]
name = "libvirt_autoscaler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "libvirt_autoscaler"
path = "src/main.rs"

[lib]
name = "libvirt_autoscaler"
doctest = false
path = "src/lib/lib.rs"

[dependencies]
virt = "0.3.0"
dotenv = "0.15.0"
prost = "0.11.9"
prost-types = "0.11.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tonic = { version = "0.9.2", features = ["tls", "tls-roots", "tls-roots-common", "tls-webpki-roots", "gzip"] }
tonic-reflection = "0.9.2"

anyhow = "1.0.71"
tokio = { version = "1.0", features = ["parking_lot", "sync", "tracing", "rt-multi-thread", "macros"] }
regex = "1.8.4"
lazy_static = "1.4.0"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
 ]
[dev-dependencies]
ctor = "0.2.3"
tokio-test = "0.4.2"
rstest = "0.17.0"
[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }

