[package]
name = "libvirt_autoscaler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "libvirt_autoscaler"
path = "src/main.rs"

[lib]
name = "libvirt_autoscaler"
doctest = false
path = "src/lib/lib.rs"

[dependencies]
virt = "0.3.0"
dotenv = "0.15.0"
prost = "0.11.9"
prost-types = "0.11.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tonic = { version = "0.9.2", features = ["tls", "tls-roots", "tls-roots-common", "tls-webpki-roots", "gzip"] }
tonic-reflection = "0.9.2"
anyhow = "1.0.71"
tokio = { version = "1.0", features = ["parking_lot", "sync", "tracing", "rt-multi-thread", "macros"] }
regex = "1.8.4"
lazy_static = "1.4.0"
config = { version = "0.13.3", features = ["toml"] }
once_cell = { version = "1.18.0", features = ["parking_lot"] }
serde = { version = "1.0.171", features = ["derive"] }
toml = "0.7.6"
[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
 ]
[dev-dependencies]
ctor = "0.2.3"
tokio-test = "0.4.2"
rstest = "0.17.0"
[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }

#[package.metadata.cross.target.aarch64-unknown-linux-gnu]
#dockerfile = "./Dockerfile.cross-arm64"

#[package.metadata.cross.target.x86_64-unknown-linux-gnu]
#dockerfile = "./Dockerfile.cross-amd64"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = ["dpkg --add-architecture arm64 && apt-get update && apt-get install --assume-yes protobuf-compiler:arm64 libvirt-dev:arm64 libvirt-glib-1.0-dev:arm64 libvirt-ocaml-dev libvirt0"]
#
[package.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = ["apt-get -y update && apt-get install --assume-yes protobuf-compiler libvirt-dev libvirt-glib-1.0-dev libvirt-ocaml-dev libvirt0"]
